package oop.polymorph;

public class Main {
    public static void main(String[] args) {
        System.out.println("Hello VignetteAustria!");
    }
}